fixed alignment issues on services section

--- a/css/style.css
+++ b/css/style.css
@@ -233,15 +233,21 @@
   margin-bottom: 1.8rem;
   color: hsl(31, 80%, 58%);
   color: #e67e22;
+  text-align: center;
 }
 
 .section-description {
   font-size: 1.6rem;
   line-height: 1.6;
   color: #666;
+  /* text-align: center; */
 }
 
 .service-img-box {
+  max-height: 20rem;
+}
+
+.service-img-box picture {
   max-height: 20rem;
 }
 
